--- a/src/pages/resources.astro
+++ b/src/pages/resources.astro
@@ -1,25 +1,13 @@
 ---
-import NavBar from "@/components/NavBar.astro";
-import Footer from "@/components/Footer.astro";
+import Main from "@/layouts/Main.astro";
 import resources from "@/data/resources.json";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Resources – abolition.ing</title>
-    <link rel="stylesheet" href="/styles/theme.css" />
-  </head>
-  <body>
-    <NavBar />
-    <main>
-      <h1>Resources</h1>
-      <ul>
-        {resources.map(r => (
-          <li><a href={r.url} target="_blank">{r.title}</a></li>
-        ))}
-      </ul>
-    </main>
-    <Footer />
-  </body>
-</html>
+<Main title="Resources – abolition.ing">
+  <h1>Resources</h1>
+  <ul>
+    {resources.map((r) => (
+      <li><a href={r.url} target="_blank">{r.title}</a></li>
+    ))}
+  </ul>
+</Main>
