align buttons on resrouces page.

--- a/src/pages/questions/[slug].astro
+++ b/src/pages/questions/[slug].astro
@@ -59,7 +59,7 @@ const page = Object.values(markdownFiles).find((module) =>
           {" "}
           ·{" "}
           <a class="external-link" href={author.url} target="_blank" rel="noopener noreferrer">
-            External
+            Visit website
           </a>
         </>
       ) : null}
