--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,6 @@
 <footer>
   <p>
-    abolition.ing — For copyright/licensing information <a href="/copyright">click here.</a>
+    <a href="/about">abolition.ing</a> - For copyright/licensing information
+    <a href="/copyright">click here.</a>
   </p>
 </footer>
