--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,32 @@
 ---
 import Main from "@/layouts/Main.astro";
 import QuestionFeed from "@/components/QuestionFeed.astro";
-import { getPublishedQuestions } from "@/lib/questions";
+import { getPublishedQuestions, listCategories } from "@/lib/questions";
 
 const published = getPublishedQuestions();
+const categories = listCategories();
 ---
 
 <Main title="abolition.ing - Questions & Answers">
-  <QuestionFeed title="Questions & Answers" questions={published} />
+  <QuestionFeed title="Questions & Answers" questions={published}>
+    <fragment slot="header">
+      <div class="feed-header">
+        <h1 class="page-title">Questions &amp; Answers</h1>
+        {categories.length ? (
+          <div class="category-meta">
+            <a class="category-chip" href="/categories">Categories</a>
+            <ul class="category-list">
+              {categories.map((category) => (
+                <li>
+                  <a class="category-chip" href={`/categories/${category.id}`}>
+                    {category.name}
+                  </a>
+                </li>
+              ))}
+            </ul>
+          </div>
+        ) : null}
+      </div>
+    </fragment>
+  </QuestionFeed>
 </Main>
