--- a/src/pages/copyright.astro
+++ b/src/pages/copyright.astro
@@ -5,14 +5,15 @@ import Main from "@/layouts/Main.astro";
 <Main title="Copyright – abolition.ing">
   <h1>Copyright</h1>
 
+  <h2>Matthew 10:8 "...Freely you have received; freely give."</h2>
+
   <p>
-    Unless otherwise stated on our website or its content (or is the property of a third-party),
-    all of our website and its content is within the Public Domain and can be used by anyone without
-    restrictions (and no attribution is necessary).
+    Unless otherwise stated all of our website and its content is within the Public Domain and can be used by anyone without
+    restriction. No attribution is necessary but it's a kind thing to do. Feel free to translate or copy or share.
   </p>
 
   <p>
-    To avoid confusion, do not use the abolition.ing branding or logo for adaptations not associated
+    To avoid confusion, we ask that you do not use the abolition.ing branding or logo for adaptations not associated
     with us (unless such use is covered under fair-use laws).
   </p>
 
@@ -22,12 +23,12 @@ import Main from "@/layouts/Main.astro";
   </p>
 
   <p>
-    You can learn more about the importance of freely giving of ministry resources at
+    Learn more about the importance of freely giving of ministry resources at
     <a href="https://SellingJesus.org" target="_blank">Selling Jesus</a>.
   </p>
 
   <p>
-    Lastly, you can learn more about the importance of removing all copyright restrictions from
+    Learn more about the importance of removing all copyright restrictions from
     Christian resources at
     <a href="https://copy.church" target="_blank">Let’s copy, church</a>.
   </p>
