test.astro retry

--- a/src/components/BibleReferencesScript.astro
+++ b/src/components/BibleReferencesScript.astro
@@ -1,5 +1,6 @@
 ---
-import scriptUrl from "@/scripts/bibleReferences.ts?url";
+import scriptUrl from "@/scripts/bibleReferences.js?url";
 ---
 
 <script type="module" src={scriptUrl}></script>
+
