--- a/src/components/BibleReferencesScript.astro
+++ b/src/components/BibleReferencesScript.astro
@@ -1,6 +1,5 @@
 ---
-import scriptUrl from "@/scripts/bibleReferences.js?url";
 ---
 
-<script type="module" src={scriptUrl}></script>
+<script type="module" src="/scripts/bibleReferences.js"></script>
 
