--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -30,10 +30,12 @@
   }
 
   nav a {
-    margin-left: 1.5rem;
+    margin-left: 1.75rem;
     text-decoration: none;
     color: #f2f2f2;
-    font-weight: 400;
+    font-weight: 600;
+    font-size: 1.3rem;
+    letter-spacing: 0.01em;
   }
 
   nav a:hover {
@@ -57,8 +59,8 @@
     }
 
     nav a {
-      margin: 0 0.75rem;
-      font-size: 0.95rem;
+      margin: 0 0.85rem;
+      font-size: 1.15rem;
     }
   }
 </style>
