--- a/src/pages/authors/[author]/index.astro
+++ b/src/pages/authors/[author]/index.astro
@@ -1,13 +1,17 @@
 ---
 import Main from "@/layouts/Main.astro";
 import QuestionFeed from "@/components/QuestionFeed.astro";
-import { findAuthor, getQuestionsByAuthor, listAuthors } from "@/lib/questions";
+import { findAuthor, getQuestionsByAuthor, listAuthors, paginateQuestions } from "@/lib/questions";
+import { siteSettings } from "@/config/siteSettings";
 
 export function getStaticPaths() {
   return listAuthors().map((author) => ({
     params: { author: author.id },
   }));
 }
+
+const enablePagination = siteSettings.enablePagination;
+const perPage = siteSettings.questionsPerPage;
 
 const { author } = Astro.params;
 const activeAuthor = findAuthor(author);
@@ -17,10 +21,35 @@ if (!activeAuthor) {
 }
 
 const matchingQuestions = getQuestionsByAuthor(activeAuthor.id);
+
+const paginationResult = enablePagination
+  ? paginateQuestions(matchingQuestions, 1, perPage)
+  : {
+      items: matchingQuestions,
+      currentPage: 1,
+      pageCount: 1,
+    };
+
+const pagination =
+  enablePagination && paginationResult.pageCount > 1
+    ? {
+        currentPage: paginationResult.currentPage,
+        pageCount: paginationResult.pageCount,
+        basePath: `/authors/${activeAuthor.id}`,
+        pageSegment: "page",
+        totalItems: paginationResult.totalItems,
+        startIndex: paginationResult.startIndex,
+        endIndex: paginationResult.endIndex,
+      }
+    : null;
 ---
 
 <Main title={`${activeAuthor.name} Questions - abolition.ing`}>
-  <QuestionFeed title="Questions & Answers" questions={matchingQuestions}>
+  <QuestionFeed
+    title="Questions & Answers"
+    questions={paginationResult.items}
+    pagination={pagination ?? undefined}
+  >
     <fragment slot="header">
       <div class="author-header">
         <h1 class="page-title">Questions &amp; Answers</h1>
