added donation form

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -19,8 +19,12 @@ Abolition.ing is maintained by followers of Christ who desire to see His bride p
 </p>  
 
 <p>  
-Contact us via email at abereanone (at) pm (dot) me. Donations are never required, but if you want to colabor with us we will use any funds for God's glory.
-</p>  
+Contact us via email at abereanone (at) pm (dot) me.
+</p>
+<p>
+Donations are never required, but if you want to colabor with us we will use any funds for God's glory. We use a secury payment processor called Zeffy.com.
+</p>
+<div style="position:relative;overflow:hidden;height:450px;width:100%;"><iframe title='Donation form powered by Zeffy' style='position: absolute; border: 0; top:0;left:0;bottom:0;right:0;width:100%;height:100%' src='https://www.zeffy.com/embed/donation-form/support-the-abolitioning-website' allowpaymentrequest allowTransparency="true"></iframe></div>
   </section>
 
   <BibleReferencesScript />
